fix: multiple fixes (#2655)
* fix: [CDNG-6766]: overlap issue

* fix: text overlap; empty group height;

* fix: test

--- a/src/modules/70-pipeline/components/ExecutionStageDiagram/ExecutionStageDiagram.module.scss
+++ b/src/modules/70-pipeline/components/ExecutionStageDiagram/ExecutionStageDiagram.module.scss
@@ -77,6 +77,7 @@
     background-color: var(--white);
     border-radius: 100px;
     cursor: pointer;
+    overflow: hidden;
 
     .label {
       margin-right: var(--spacing-large);
